--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <meta http-equiv="refresh" content="0; url=/risk-sentry/frontend">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Risk-Sentry 🛡️</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <!-- Редирект на фронтенд -->
+<body class="bg-light">
+    <div class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card shadow">
+                    <div class="card-body p-5">
+                        <div class="text-center mb-4">
+                            <h1 class="h3">🛡️ Risk-Sentry</h1>
+                            <p class="text-muted">Проверка договоров ГПХ на скрытые риски</p>
+                        </div>
+                        
+                        <div id="promo-section">
+                            <h2 class="h5 mb-3">Введите промокод</h2>
+                            <div class="mb-3">
+                                <input type="text" 
+                                       class="form-control" 
+                                       id="promoCode" 
+                                       placeholder="RS-ORG-001">
+                            </div>
+                            <button class="btn btn-primary w-100" onclick="alert('Бэкенд пока не готов')">
+                                Активировать
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center mt-4 text-muted small">
+                    <p>AI на YandexGPT | Для организаций</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
